triggered not need to test a flow, and multiple nodes fix

--- a/frontend/src/assets/css/components.css
+++ b/frontend/src/assets/css/components.css
@@ -46,7 +46,7 @@
     }
 
     .input-textarea {
-        @apply input py-4 !h-auto;
+        @apply input py-4 min-h-[200px];
     }
 
     .main-layout {
