added consulting page init

--- a/frontend/src/assets/css/variables.css
+++ b/frontend/src/assets/css/variables.css
@@ -3,7 +3,7 @@
     --secondary: #000000;
     --tertiary: #F5F1FE;
     --secondaryLight: #ccc2ef;
-    --light_primary: #c4c4d0;
+    --light_primary: #F7F9FB;
     --faded_primary: #03030321;
     --sea: #554a27;
     --danger: #FF2A2A;
@@ -13,6 +13,7 @@
     --grey: #f4f7fa;
     --grey_one: #E9E9E9;
     --grey_two: #2b2b38;
+    --grey_three: #F2F2F2;
     --grey_four: #646368;
     --grey_six: #908F93;
     --grey_eight: #BCBCBE;
