chat interfce implemented

--- a/frontend/src/assets/css/variables.css
+++ b/frontend/src/assets/css/variables.css
@@ -1,34 +1,34 @@
 :root {
-    --primary: #601DED;
-    --secondary: #000000;
-    --tertiary: #F5F1FE;
-    --secondaryLight: #ccc2ef;
-    --light_primary: #F7F9FB;
-    --faded_primary: #03030321;
-    --sea: #554a27;
-    --danger: #FF2A2A;
-    --light: #ffffff;
-    --dark: #000000;
-    --light_grey: #a4a4a4;
-    --grey: #f4f7fa;
-    --grey_one: #E9E9E9;
-    --grey_two: #2b2b38;
-    --grey_three: #F2F2F2;
-    --grey_four: #646368;
-    --grey_six: #908F93;
-    --grey_eight: #BCBCBE;
-    --grey_nine: #D3D2D4;
-    --soft_purple: #b5afff;
-    --baby_purple: #766cff;
-    --dark_purple: #0e0ba1;
-    --line: #E4E7EC;
-    --hover: #eaebec99;
-    --greenx: #28a737;
-    --headline: #212028;
-    --subText: #344054;
-    --text-secondary: #646368;
-    --mw: 720px;
-    --mw2: 890px;
+	--primary: #601ded;
+	--secondary: #000000;
+	--tertiary: #f5f1fe;
+	--secondaryLight: #ccc2ef;
+	--light_primary: #f7f9fb;
+	--faded_primary: #03030321;
+	--sea: #554a27;
+	--danger: #ff2a2a;
+	--light: #ffffff;
+	--dark: #000000;
+	--light_grey: #a4a4a4;
+	--grey: #f4f7fa;
+	--grey_one: #e9e9e9;
+	--grey_two: #2b2b38;
+	--grey_three: #f2f2f2;
+	--grey_four: #646368;
+	--grey_six: #908f93;
+	--grey_eight: #bcbcbe;
+	--grey_nine: #d3d2d4;
+	--soft_purple: #b5afff;
+	--baby_purple: #766cff;
+	--dark_purple: #0e0ba1;
+	--line: #e4e7ec;
+	--hover: #eaebec99;
+	--greenx: #28a737;
+	--headline: #212028;
+	--subText: #344054;
+	--text-secondary: #646368;
+	--mw: 760px;
+	--mw2: 890px;
 }
 
 /* [theme='light'] {
