--- a/frontend/src/assets/css/components.css
+++ b/frontend/src/assets/css/components.css
@@ -88,6 +88,11 @@
 	.btn {
 		@apply center px-6 py-[11px]  rounded-[10px] text-sm   font-semibold button_shadow disabled:bg-gray-500 disabled:text-dark disabled:cursor-not-allowed transite;
 	}
+	.btn2 {
+
+		@apply center px-6 py-[11px] rounded-[10px] text-sm font-semibold  border-[3px] border-[#E9E9E9] disabled:text-dark disabled:cursor-not-allowed transite;
+	}
+	
 	.btn-primary {
 		@apply btn bg-primary text-light hover:scale-95;
 	}
