--- a/frontend/src/assets/css/global.css
+++ b/frontend/src/assets/css/global.css
@@ -126,3 +126,11 @@ select {
   opacity: 0;
   transform: scale(0.5);
 }
+.button-margin-div {
+  border: 2px solid #9306FF;
+  display: inline-block;
+  padding: 3px 3px 3px 3px;
+}
+.font-color-menu{
+  color:#2F2D3B;
+}
