--- a/frontend/src/assets/css/components.css
+++ b/frontend/src/assets/css/components.css
@@ -110,7 +110,7 @@
 		@apply rounded-lg px-4 py-1.5 flex justify-center items-center font-medium disabled:bg-gray-500 disabled:text-dark disabled:cursor-not-allowed  box-border  border border-secondary hover:shadow-[4px_3.5px_0px_0px_#000] transite;
 	}
 	.btn {
-		@apply center px-6 py-[11px]  rounded-[6px] text-sm   font-semibold  disabled:bg-gray-500 disabled:text-dark disabled:cursor-not-allowed transite;
+		@apply center px-6 py-[11px]  rounded-[6px] text-sm   font-medium  disabled:bg-gray-500 disabled:text-dark disabled:cursor-not-allowed transite;
 	}
 	.btn2 {
 		@apply center px-6 py-[11px] rounded-[6px] text-sm font-semibold  border-[3px] border-[#E9E9E9] disabled:text-dark disabled:cursor-not-allowed transite;
