--- a/frontend/src/assets/css/utils.css
+++ b/frontend/src/assets/css/utils.css
@@ -1,10 +1,8 @@
-
-
-.flow-bg{
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center center;
-  background-repeat: repeat;
-  /* background-image: url('data:image/svg+xml,') */
+.flow-bg {
+	width: 100%;
+	height: 100%;
+	background-size: cover;
+	background-position: center center;
+	background-repeat: repeat;
+	background-image: url('@/assets/img/dot.svg');
 }
