--- a/frontend/src/assets/css/utils.css
+++ b/frontend/src/assets/css/utils.css
@@ -1,6 +1,6 @@
 .flow-bg {
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 	background-size: cover;
 	background-position: center center;
 	background-repeat: repeat;
